--- a/userpage.html
+++ b/userpage.html
@@ -14,11 +14,13 @@
 
 <body>
     <header>
+<!--Welcome message updated with first name from location storage-->
         <div id="header-div">
             <div>
                 <h1>WELCOME TO DIFFERENTIAL, <span id="user-first-name"></span>!</h1>
             </div>
             <div>
+<!--Burger button containing information of user and log out link-->
                 <button id="user-button"></button>
                 <div id="user-info-div">
                     <h3 id="user-name"></h3>
@@ -32,6 +34,7 @@
             </div>
         </div>
     </header>
+<!--Section holding description of site and game instructions-->
     <section id="instructions">
         <h2>GAME DESCRIPTION</h2>
         <div>
@@ -64,33 +67,39 @@
             </div>
         </div>
     </section>
+<!--Game section containing playground and updatable abouts with text and table-->
     <section id="game-area">
         <h2>LET´S PLAY</h2>
         <p id="dummy-p"></p>
         <div>
             <div id="game-area-left">
                 <div id="game-buttons-area">
-                    <span id="holder1"></span>
                     <button id="spring-button" class="game-buttons">SPRING</button>
                     <button id="dissipator-button" class="game-buttons">DISSIPATOR</button>
+<!--This spans are display:none in order to hold invisible information to be used by js-->
+                    <span id="holder1"></span>
                     <span id="holder2"></span>
                     <span id="holder3"></span>
                     <span id="holder4"></span>
                     <span id="holder5"></span>
                 </div>
+<!--SVG figure to provide docking place for elements generated to play the game-->
                 <svg width="100" height="250">
                     <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
                     V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="#a75910"/>
                 </svg>
                 <br>
+<!--socket buttons activated only when in tablets or mobiles-->
                 <button id="socket-1" class="round-button"></button>
                 <button id="socket-2" class="round-button"></button>
                 <button id="socket-3" class="round-button"></button>
                 <button id="socket-4" class="round-button"></button>
                 <button id="reset-button" class="game-buttons">RESET</button>
             </div>
+<!--This about is updated by JS to show the equations as elements are added in the playground-->
             <div id="game-area-center">
             </div>
+<!--Table displaying equations for elements docked and providing information for JS-->
             <div id="game-area-right">
                 <h3>PHYSICAL DESCRIPTION</h3>
                 <table>
