change education values to fit international standards

--- a/suscribe.html
+++ b/suscribe.html
@@ -51,10 +51,10 @@
                     <br>
                     <select id="education" name="education" class="login-input" required>
                         <option value="">Please select</option>
-                        <option value="Level 5">Level 5</option>
-                        <option value="Level 6">Level 6</option>
-                        <option value="Level 7">Level 7</option>
-                        <option value="Level 8">Level 8</option>
+                        <option value="High School">High School</option>
+                        <option value="BSc">BSc</option>
+                        <option value="MSc">MSc</option>
+                        <option value="PhD">PhD</option>
                     </select>
                     <br>
                     <label for="user-email">Email: </label>
