add title to h3s in the userpage info header

--- a/userpage.html
+++ b/userpage.html
@@ -23,9 +23,9 @@
 <!--Burger button containing information of user and log out link-->
                 <button id="user-button"></button>
                 <div id="user-info-div">
-                    <h3><span id="user-name"></span></h3>
-                    <h3><span id="user-email"></span></h3>
-                    <h3><span id="user-education"></span></h3>
+                    <h3>Name: <span id="user-name"></span></h3>
+                    <h3>Email: <span id="user-email"></span></h3>
+                    <h3>Education: <span id="user-education"></span></h3>
                     <h3><a href="index.html">
                             Log out
                         </a></h3>
