add first time user expectations

--- a/suscribe.html
+++ b/suscribe.html
@@ -65,7 +65,7 @@
                     <br>
                     <input type="password" id="user-pass" name="user-password" class="login-input" required>
                     <br>
-                    <button id="suscribe-button" type="submit">Suscribe</button>
+                    <button id="suscribe-button" type="submit">Sign-up</button>
                 </fieldset>
             </form>
         </div>
