populate readme file user experience section

--- a/userpage.html
+++ b/userpage.html
@@ -76,11 +76,11 @@
                     <button id="spring-button" class="game-buttons">SPRING</button>
                     <button id="dissipator-button" class="game-buttons">DISSIPATOR</button>
 <!--This spans are display:none in order to hold invisible information to be used by js-->
-                    <span id="holder1"></span>
-                    <span id="holder2"></span>
-                    <span id="holder3"></span>
-                    <span id="holder4"></span>
-                    <span id="holder5"></span>
+                    <span id="holder1">0</span>
+                    <span id="holder2">0</span>
+                    <span id="holder3">id</span>
+                    <span id="holder4">0</span>
+                    <span id="holder5">0</span>
                 </div>
 <!--SVG figure to provide docking place for elements generated to play the game-->
                 <svg width="100" height="250">
