add aria-label to burger button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div id="suscribe-link-div">
                 <h4>Or</h4>
                 <br>
-                <h4><a href="suscribe.html">Sign-up here</a></h4>
+                <h4><a href="suscribe.html">Sign-up</a></h4>
             </div>
         </div>
     </div>
