--- a/userpage.html
+++ b/userpage.html
@@ -21,7 +21,7 @@
             </div>
             <div>
     <!--Burger button containing information of user and log out link-->
-                <button id="user-button"></button>
+                <button id="user-button" aria-label="burger button"></button>
                 <div id="user-info-div">
                     <h3>Name: <span id="user-name"></span></h3>
                     <h3>Email: <span id="user-email"></span></h3>
